--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@ header {
 <h1 class="text-2xl font-bold" id="title">Donate for Flood at Noakhali, Bangladesh</h1>
 <p> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
 <input type="text" id="input-field" class="w-full border-2 rounded-xl p-2" placeholder="Write Donation Amount">
-<!-- <button class="bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now">Donate Now</button> -->
 
 
 <!-- Open the modal using ID.showModal() method -->
-<button class="btn bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now">open modal</button>
+<button class="btn bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now">Donate Now</button>
 <dialog id="my_modal_1" class="modal ">
   <div class="modal-box text-center flex flex-col gap-3 items-center justify-center">
     <h3 class="text-xl font-bold">Congrates!</h3>
@@ -132,10 +131,9 @@ header {
     <h1 class="text-2xl font-bold" id="title-2">Donate for Flood Relief in Feni,Bangladesh</h1>
         <p>The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
     <input type="text" class="w-full border-2 rounded-xl p-2" id="input-field-2" placeholder="Write Donation Amount">
-    <!-- <button class="bg-[#B4F461] w-full rounded-lg font-bold py-3" id="donate-now-2">Donate Now</button> -->
     
 
-    <button class="btn bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now-2">open modal</button>
+    <button class="btn bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now-2">Donate Now</button>
 <dialog id="my_modal_1" class="modal ">
   <div class="modal-box text-center flex flex-col gap-3 items-center justify-center">
     <h3 class="text-xl font-bold">Congrates!</h3>
@@ -177,8 +175,7 @@ header {
     <h1 class="text-2xl font-bold" id="title-3">Aid for Injured in the Quota Movement</h1>
         <p>The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
     <input type="text" class="w-full border-2 rounded-xl p-2" id="input-field-3" placeholder="Write Donation Amount">
-    <!-- <button class="bg-[#B4F461] w-full rounded-lg font-bold py-3" id="donate-now-3">Donate Now</button> -->
-    <button class="btn bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now-3">open modal</button>
+    <button class="btn bg-[#B4F461]  w-full rounded-lg font-bold py-3" id="donate-now-3">Donate Now</button>
 <dialog id="my_modal_1" class="modal ">
   <div class="modal-box text-center flex flex-col gap-3 items-center justify-center">
     <h3 class="text-xl font-bold">Congrates!</h3>
@@ -227,7 +224,7 @@ header {
 
 
 
-<footer class="bg-[#F9F7F3] p-12 "></footer>
+<footer class="bg-[#F9F7F3] p-12 " id="footer"></footer>
 
 
 
