added some new texts

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,8 @@
 
 
     <div class="container flex flex-col justify-center items-center w-[80%] mx-auto gap-4 mt-6 mb-12">
-
+ 
+      <h1 class="font-bold text-[30px] my-4">Important FAQ</h1>
       <div class="collapse collapse-arrow bg-base-200">
         <input type="radio" name="my-accordion-2" checked="checked" />
         <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
